* added GTSdate in get_aggregate
0.3 07mar2021
* added configuration items in install.py
* added dayET and ET24
0.4 10mar2021
* added aggregation type 'energy_integral' for observation type 'radiation'
0.4.1 11mar2021
* changed configuration entry for dayET and ET24 to 'prefer_hardware,archive'
* column name 'interval' enclosed in backticks for MySQL
0.5 15may2021
* fixed calculation of GTS.max
* correct calculation of GTS.max, min, maxtime, mintime for arbitrary time spans
* energy_integral works for maxSolarRad, too
0.5.1 20may2021
* local time offset rounded to whole minutes for Python < 3.7
0.5.2 01jun2021
* fix bug that creates an exception if the timespan starts after May 31st
0.6b1 11jun2021
* adapted to changed XType api of coming WeeWX 4.6
* tags for day boundaries different to local timezone time
* observation type yearGDD and seasonGDD
* aggregation type GDD (or growdeg)
0.6b2 12jun2021
* bug fixes
0.6b3 29jun2021
* bug fixes
* added missing details
0.6b4 02aug2021
* correct typo in install.py
0.6 03aug2021
* months_ago
* release
0.7 17oct2021
* extend aggregation type 'energy_integral' to 'group_power'
* new timespan $daylight
* new series $week.daylights $month.daylights $year.daylights
0.7.1 08jan2022
* fix bug that caused wrong values after year change
0.7.2 18jan2022
* no timestamps in future in calc_gts #13
0.8a1 27jul2022
* new observation types
0.8a2 29jul2022
* more new observation types
* bug fixes
* docu
* calculate aggregation for the new observation types
0.8a3 04aug2022
* option "horizon" and "use_center" for $daylight and .daylights
* fix bug in "energy_integral"
0.8a4 05sep2022
* option "day" for $daylight to simplify for loops
0.8a5 04nov2022
* rename option "day" to "timestamp"
* get correct temperature and barometer for calculating sunrise and sunset in $daylight
* property "length"
0.8b1 06nov2022
* docu
* bug fixes
0.8 18nov2022
* release
1.0
* changed error handling for pyephem in daybounderystats.py