@@ -66,3 +66,5 @@
 * release
 1.0
 * changed error handling for pyephem in daybounderystats.py
+* fix bug that caused exception if record is None
+
